--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "version": "0.1",
     "dumper" : {
-        "schedule" : "0 1 * * *", 
-        "data_url" : ["http://su13/outbreak/wastewater/wastewater_agg_demix.json"],
-        "uncompress" : true,
+        "schedule" : "0 1 * * *",
+        "data_url" : ["https://media.githubusercontent.com/media/dylanpilz/Freyja-SRA/main/outputs/aggregate/aggregate_demix.json"],
+        "uncompress" : false,
         "release": "version:get_release"
     },
-    "uploader" : { 
+    "uploader" : {
         "parser" : "parse:load_data",
         "on_duplicates" : "error",
         "mapping": "parse:custom_data_mapping"
