--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,29 @@
     "version": "0.1",
     "dumper" : {
         "schedule" : "0 1 * * *",
-        "data_url" : ["https://storage.googleapis.com/outbreak-ww-data/aggregate/aggregate_demix.json"],
+        "data_url" : [
+            "https://storage.googleapis.com/outbreak-ww-data/aggregate/aggregate_demix.json",
+            "https://storage.googleapis.com/outbreak-ww-data/aggregate/aggregate_variants_by_acc.json",
+            "https://storage.googleapis.com/outbreak-ww-data/aggregate/aggregate_variants_by_mut.json"
+        ],
         "uncompress" : false,
         "release": "version:get_release"
     },
-    "uploader" : {
-        "parser" : "parse:load_data",
-        "on_duplicates" : "error",
-        "mapping": "parse:custom_data_mapping"
-    }
+    "uploader" : [
+        {
+            "parser" : "parse:load_data_aggregate_demix",
+            "on_duplicates" : "error",
+            "mapping": "parse:custom_data_mapping_aggregate_demix"
+        },
+        {
+            "parser" : "parse:load_data_aggregate_variants_by_acc",
+            "on_duplicates" : "error",
+            "mapping": "parse:custom_data_mapping_aggregate_variants_by_acc"
+        },
+        {
+            "parser" : "parse:load_data_aggregate_variants_by_mut",
+            "on_duplicates" : "error",
+            "mapping": "parse:custom_data_mapping_aggregate_variants_by_mut"
+        }
+    ]
 }
