--- a/manifest.json
+++ b/manifest.json
@@ -12,19 +12,19 @@
     },
     "uploaders" : [
         {
-            "name": "aggregate_demix",
+            "name": "wastewater_demix",
             "parser" : "parse:load_data_aggregate_demix",
             "on_duplicates" : "error",
             "mapping": "parse:custom_data_mapping_aggregate_demix"
         },
         {
-            "name": "aggregate_variants_by_acc",
+            "name": "wastewater_by_sample",
             "parser" : "parse:load_data_aggregate_variants_by_acc",
             "on_duplicates" : "error",
             "mapping": "parse:custom_data_mapping_aggregate_variants_by_acc"
         },
         {
-            "name": "aggregate_variants_by_mut",
+            "name": "wastewater_by_mutname",
             "parser" : "parse:load_data_aggregate_variants_by_mut",
             "on_duplicates" : "error",
             "mapping": "parse:custom_data_mapping_aggregate_variants_by_mut"
